Change header image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="parallax-container">
-    <div class="parallax"><img src="{{ "/assets/imgs/raspberry-pi.jpg" | prepend: site.baseurl }}"></div>
+    <div class="parallax"><img src="{{ "/assets/imgs/white-mesh.jpg" | prepend: site.baseurl }}"></div>
 </div>
 
 <div class="section no-pad-bot" id="index-banner">
