Add week 2 stuff

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 layout: default
 ---
 
-<div class="parallax-container">
-    <div class="parallax"><img src="{{ "/assets/imgs/white-mesh.jpg" | prepend: site.baseurl }}"></div>
+<div class="header-image-container">
+    <img class="header-image" src="{{ "/assets/imgs/white-mesh.jpg" | prepend: site.baseurl }}">
 </div>
+
+<!--<div class="parallax-container">
+    <div class="parallax"><img src="{{ "/assets/imgs/white-mesh.jpg" | prepend: site.baseurl }}"></div>
+</div>-->
 
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
