Add project progress page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ layout: default
         <div class="row center">
             <a href="{{ "/about" | prepend: site.baseurl }}"
                class="btn-large waves-effect waves-light">About</a>
+            <a href="{{ "/project" | prepend: site.baseurl }}"
+            class="btn-large waves-effect waves-light">Project Progress</a>
         </div>
         <br><br>
 
