--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ layout: default
         </div>
         <div class="row center">
             <a href="{{ "/about" | prepend: site.baseurl }}"
-               class="btn-large waves-effect waves-light">About</a>
+               class="btn-large waves-effect waves-light">About Me</a>
+            &nbsp;
             <a href="{{ "/project" | prepend: site.baseurl }}"
-            class="btn-large waves-effect waves-light">Project Progress</a>
+                class="btn-large primary-color deep-purple waves-effect waves-light">
+                <i class="mdi mdi-robot"></i> &nbsp; Project Progress</a>
         </div>
         <br><br>
 
@@ -31,8 +33,8 @@ layout: default
 <div class="container">
     <div class="row">
         {% for post in site.posts %}
-        <div class="col s12 m6">
-            <div class="card z-depth-2 hoverable medium">
+        <div class="col s12 l8 offset-l2">
+            <div class="card z-depth-2 hoverable">
                 <div class="card-image">
                     {% if post.image %}
                         <img src="{{ post.image | prepend: "/assets/" | prepend: site.baseurl }}">
